--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,21 @@
-Package: ji.rpkg.template
-Title: Your Package Title in Title Case
-Version: 0.0.0.9000
+Package: daedalus.data
+Title: DAEDALUS data
+Version: 0.0.1
 Authors@R: c(
-    person("Pratik", "Gupte", , "pratik.gupte@lshtm.ac.uk", role = c("aut", "cre"),
-           comment = c(ORCID = "0000-0001-5294-7819")),
+    person("Pablo", "Perez-Guzman", , "p.perez-guzman@imperial.ac.uk", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0002-5277-5196")),
     person("Abdul Latif Jameel Institute for Disease and Emergency Analytics", role = "fnd"),
     person("Imperial College of Science, Technology and Medicine", role = c("cph", "fnd"))
   )
-Description: Your package description. It must end with a period (".") and
-    include relevant bibliographical references if applicable, using the
-    following format: Author et al. (2023) <doi:10.5281/zenodo.6619350>.
+Description: Package to handel input data for the daedalus model.
 License: MIT + file LICENSE
 Suggests: 
     knitr,
     rmarkdown,
     spelling,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    daedalus (>= 0.2.8),
+    dust2 (>= 0.3.22)
 VignetteBuilder: 
     knitr
 Config/Needs/website: jameel-institute/jameelinst.rpkg.theme
