--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,30 @@
-# History files
+.Rproj.user
 .Rhistory
 .Rapp.history
-
-# Session Data files
 .RData
 .RDataTmp
-.DS_Store
-
-# User-specific files
 .Ruserdata
-
-# Example code in package build process
+.DS_Store
 *-Ex.R
-
-# Output files from R CMD build
-/*.tar.gz
-
-# Output files from R CMD check
-/*.Rcheck/
-
-# RStudio files
-.Rproj.user/
-
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
-
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
-
-# knitr and R markdown default cache directories
-*_cache/
-/cache/
-
-# Temporary files created by R markdown
-*.utf8.md
-*.knit.md
-
-# R Environment Variables
-.Renviron
-
-# pkgdown site
-docs/
-
-# translation temp files
-po/*~
-
-# RStudio Connect folder
-rsconnect/
-inst/doc
+*.pdf
+TODO.md
 docs
+*.o
+*.so
+*.dll
+*.dylib
+*.gcda
+*.gcno
+*.gcov
+.valgrind_ignore
+inst/doc
+pkgdown
+scratch*
+/doc/
+/Meta/
+format-cpp.sh
+lint-cpp.sh
+format-R.sh
+.vscode
+vignettes/*.html
+.Renviron
