--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,18 +9,33 @@ Authors@R: c(
   )
 Description: Package to handel input data for the daedalus model.
 License: MIT + file LICENSE
+URL: https://github.com/jameel-institute/daedalus.data,
+    https://jameel-institute.github.io/daedalus.data/
+BugReports: https://github.com/jameel-institute/daedalus.data/issues
+Depends:
+    R (>= 3.5)
+Imports: 
+    checkmate,
+    cli,
+    data.table
 Suggests: 
     knitr,
     rmarkdown,
     spelling,
     testthat (>= 3.0.0),
     daedalus (>= 0.2.8),
-    dust2 (>= 0.3.22)
+    dust2 (>= 0.3.22),
+    tidyverse
 VignetteBuilder: 
     knitr
+Remotes:
+    mrc-ide/dust2,
+    mrc-ide/monty,
+    jameel-institute/daedalus.data
 Config/Needs/website: jameel-institute/jameelinst.rpkg.theme
 Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-GB
+LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
