--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,7 @@ VignetteBuilder:
 Remotes:
     mrc-ide/dust2,
     mrc-ide/monty,
-    jameel-institute/daedalus.data
+    jameel-institute/daedalus
 Config/Needs/website: jameel-institute/jameelinst.rpkg.theme
 Config/testthat/edition: 3
 Encoding: UTF-8
