--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,8 +16,7 @@ Depends:
     R (>= 3.5)
 Imports: 
     checkmate,
-    cli,
-    data.table
+    daedalus
 Suggests: 
     knitr,
     rmarkdown,
