--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,15 +1,38 @@
-^.*\.Rproj$
-^CITATION\.cff$
-^LICENSE\.md$
-^Meta$
+^scripts$
+^Makefile$
 ^README\.Rmd$
-^\.Rproj\.user$
-^\.github$
-^\.lintr$
-^\.pre-commit-config\.yaml$
-^_pkgdown\.yml$
-^codecov\.yml$
-^doc$
+^\.travis\.yml$
 ^docs$
+^\.lintr$
+^tests/testthat/.*\.o$
+^tests/testthat/.*\.so$
+^tests/testthat/.*\.dll$
+\.dylib$
+^appveyor\.yml$
+^docker$
+^\.hadolint\.yaml$
+\.valgrind_ignore$
+\.gcda$
+\.gcno$
 ^pkgdown$
-^tools$
+^LICENSE\.md$
+^buildkite$
+^\.covrignore$
+^\.github$
+\.*gcov$
+^_pkgdown\.yml$
+^.*\.Rproj$
+^\.Rproj\.user$
+^CITATION\.cff$
+^codecov\.yml$
+^scratch.R
+^data-raw$
+^doc$
+^Meta$
+^format-cpp.sh$
+^lint-cpp.sh$
+^CPPLINT.cfg$
+^touchstone$
+^format-R.sh$
+^air.toml$
+^\.vscode$
