--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,10 @@ Authors@R: c(
            comment = c(ORCID = "0000-0002-5277-5196")),
     person("Pratik", "Gupte", , "pratik.gupte@lshtm.ac.uk", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-5294-7819")),
+    person("Patrick", "Doohan", role = "aut",
+           comment = c(ORCID = "0000-0001-8076-1106")),
+    person("Robert", "Johnson", role = "aut",
+           comment = c(ORCID = "0000-0002-7365-0042")),
     person("Abdul Latif Jameel Institute for Disease and Emergency Analytics", role = "fnd"),
     person("Imperial College of Science, Technology and Medicine", role = c("cph", "fnd"))
   )
